--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -36,7 +36,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:columnCount="4"
+            android:columnCount="5"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,15 +151,6 @@
                 android:text="-" />
 
             <Button
-                android:id="@+id/functionInputClear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_columnWeight="1"
-                android:layout_row="3"
-                android:text="Clr" />
-
-            <Button
                 android:id="@+id/numericInput0"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -169,15 +160,6 @@
                 android:text="0" />
 
             <Button
-                android:id="@+id/functionInputDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_columnWeight="1"
-                android:layout_row="3"
-                android:text="Del" />
-
-            <Button
                 android:id="@+id/operatorInputAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -185,6 +167,33 @@
                 android:layout_columnWeight="1"
                 android:layout_row="3"
                 android:text="+" />
+
+            <Button
+                android:id="@+id/functionInputEquals"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="4"
+                android:layout_columnWeight="1"
+                android:layout_row="0"
+                android:text="=" />
+
+            <Button
+                android:id="@+id/functionInputDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="4"
+                android:layout_columnWeight="1"
+                android:layout_row="2"
+                android:text="Del" />
+
+            <Button
+                android:id="@+id/functionInputClear"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="4"
+                android:layout_columnWeight="1"
+                android:layout_row="3"
+                android:text="Clr" />
 
         </GridLayout>
 
